<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="5dp">

    <ImageButton
        android:id="@+id/ivSignup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/profilepic" />

    <EditText
        android:id="@+id/etSFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Full name" />

    <EditText
        android:id="@+id/etSUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Username" />

    <EditText
        android:id="@+id/etSAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Address" />

    <EditText
        android:id="@+id/etSPhonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Phonenumber" />

    <EditText
        android:id="@+id/etSPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Password" />

    <EditText
        android:id="@+id/etSWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Weight" />

    <EditText
        android:id="@+id/etSHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Height" />

    <Button
        android:id="@+id/btnSSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_marginTop="10dp"
        android:text="Sign Up" />

</LinearLayout>
</ScrollView>
</RelativeLayout>